--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,5 +47,12 @@ margin-top: 100px;
  }
 
  .history-button{
-    display: block;
+    position: relative;
+    bottom: 500px;
+   display: block;
+    width: 100px;
+    height: 50px;
+    margin-bottom: 2px;
+    background-color: blanchedalmond;
+    
  }
