--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,10 @@
+/* universal selector*/
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
-body{
-    font-family: sans-serif;
-}
-
-.input{
-    text-align: center;
-    margin: 100px 0;
-}
+/* element selectors*/
 
 input[type="text"]{
    height: 50px;
@@ -36,6 +29,19 @@ input[type="submit"]{
     border-radius: 2px;
  }
 
+ body{
+    font-family: sans-serif;
+}
+section{
+    border: 2px solid blue;
+    width: max-content;
+    height: max-content;
+    padding: 50px;
+    background-color: gainsboro;
+    margin-top: -90px;
+ }
+
+ /* class selectors*/
  .display{
     text-align: center;
  }
@@ -57,15 +63,6 @@ margin-top: 100px;
     
  }
 
- section{
-    border: 2px solid blue;
-    width: max-content;
-    height: max-content;
-    padding: 50px;
-    background-color: gainsboro;
-    margin-top: -90px;
- }
-
  .display{
     background-color: gainsboro;
     border: 2px solid black;
@@ -78,4 +75,8 @@ margin-top: 100px;
     background-color: blanchedalmond;
     justify-content: center;
     min-height: 70px;
+}
+.input{
+    text-align: center;
+    margin: 100px 0;
 }
